bug on iphone

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6, p, .btn, .navbar-nav a, .form-control, .list-inline, small, #techSkills {
     font-family: 'Montserrat', sans-serif;
 }
+
 p, .lead {
     font-family: 'Raleway', sans-serif;
 }
@@ -321,7 +322,6 @@ header {
     animation-timing-function: linear;
 }
 
-
 .mouse-icon .scroll {
     background: #fff none repeat scroll 0 0;
     border-radius: 10px;
@@ -371,7 +371,7 @@ header {
     -o-background-size: cover;
     background-size: cover;
     min-height: 110vh;
-    height:1080px;;
+    height: 1080px;;
     overflow: hidden;
 }
 
@@ -458,7 +458,6 @@ footer {
     overflow: hidden;
 }
 
-
 .techSkills_container {
     padding-left: 0px;
     padding-right: 0px;
@@ -476,7 +475,7 @@ footer {
    Form styles
    ========================================================================== */
 .form-control {
-    background-color: rgba(255,255,255,.7);
+    background-color: rgba(255, 255, 255, .7);
     background-image: none;
     border: 2px solid transparent;
     border-radius: 4px;
@@ -530,7 +529,6 @@ footer {
     }
 
 }
-
 
 /* cube stuff----------------- */
 .container2 {
@@ -676,13 +674,14 @@ footer {
     background-color: rgba(255, 255, 255, .6);
     margin: 20px;
     padding: 20px;
-    padding-top:0;
+    padding-top: 0;
     max-height: 300px;
     border-radius: 20px;
     border: 4px solid black;
     transition-duration: .35s;
 }
-.info:hover{
+
+.info:hover {
     box-shadow: 0 0 50px white;
     cursor: pointer;
 }
@@ -721,7 +720,7 @@ footer {
     margin: auto;
     display: block;
     width: 90%;
-    margin-top:20px;
+    margin-top: 20px;
     margin-bottom: 20px;
     vertical-align: middle;
     border-style: solid;
@@ -758,7 +757,7 @@ footer {
     z-index: 2;
 }
 
-.column{
+.column {
     vertical-align: top;
     display: inline-block;
     height: 70%;
@@ -769,20 +768,20 @@ footer {
     font-size: 65px;
     line-height: 65px;
     letter-spacing: -1px;
-    font-weight:700;
+    font-weight: 700;
     text-align: center;
     margin-bottom: 5vh;
-    margin-top:-6vh ;
+    margin-top: -6vh;
 }
 
 .technical_header2 {
     font-size: 35px;
     line-height: 35px;
     letter-spacing: -1px;
-    font-weight:700;
+    font-weight: 700;
     text-align: center;
     margin-bottom: 5vh;
-    margin-top:-6vh ;
+    margin-top: -6vh;
 }
 
 .front_header, .front_header2 {
@@ -790,14 +789,15 @@ footer {
     font-size: 65px;
     line-height: 65px;
     letter-spacing: -1px;
-    font-weight:700;
+    font-weight: 700;
     text-align: center;
     position: absolute;
     display: inline-block;
     bottom: 18vh;
-    color:#A42327;
+    color: #A42327;
 
 }
+
 .front_header2 {
     font-size: 35px;
     line-height: 35px;
@@ -805,6 +805,7 @@ footer {
     right: 17vw;
 
 }
+
 /* code for animated blinking cursor */
 .typed-cursor {
     font-size: 25px;
@@ -843,47 +844,55 @@ footer {
 
     }
 }
-    @media screen and (max-width: 1145px) {
-        .front_header {
-            font-size: 35px;
-            line-height: 35px;
-            bottom: 25vh;
-            right: 10vw;
-        }
 
-        .front_header2 {
-            font-size: 20px;
-            line-height: 20px;
-            bottom: 20vh;
-            right: 8vw;
-        }
-        .typed-cursor {
-            font-size: 20px;
-            left: 5%;
-        }
-        .typed_string {
-            font-size: 20px;
-            left: 5%;
-        }
-
+@media screen and (max-width: 1145px) {
+    .front_header {
+        font-size: 35px;
+        line-height: 35px;
+        bottom: 25vh;
+        right: 10vw;
     }
-        @media screen and (max-width: 975px) {
+
+    .front_header2 {
+        font-size: 20px;
+        line-height: 20px;
+        bottom: 20vh;
+        right: 8vw;
+    }
+
+    .typed-cursor {
+        font-size: 20px;
+        left: 5%;
+    }
+
+    .typed_string {
+        font-size: 20px;
+        left: 5%;
+    }
+
+}
+
+@media screen and (max-width: 975px) {
     .skills {
         border-width: 5px;
         border-radius: 10px;
         margin-top: 0px;
     }
+
     .skills:hover {
         font-size: 15px;
     }
-    .column{
+
+    .column {
         width: 31%;
     }
-    .technical_header{
+
+    .technical_header {
         font-size: 55px;
         line-height: 55px;
     }
 }
+
 @media screen and (max-width: 750px) {
     .front_header {
         font-size: 35px;
@@ -891,6 +900,7 @@ footer {
         bottom: 33vh;
         right: 10vw;
     }
+
     .front_header2 {
         font-size: 20px;
         line-height: 20px;
@@ -901,6 +911,7 @@ footer {
     .typed-cursor {
         font-size: 13px;
     }
+
     .typed_string {
         font-size: 13px;
     }
@@ -911,13 +922,16 @@ footer {
         border-radius: 10px;
         margin-top: 0px;
     }
+
     .skills:hover {
         font-size: 15px;
     }
+
     #techSkills {
         height: 100vh;
     }
-    .technical_header{
+
+    .technical_header {
         font-size: 45px;
         line-height: 45px;
     }
@@ -930,13 +944,16 @@ footer {
         border-radius: 5px;
         margin-top: 0px;
     }
+
     .skills:hover {
         font-size: 10px;
     }
+
     #techSkills {
         height: 100vh;
     }
-    .technical_header{
+
+    .technical_header {
         font-size: 35px;
         line-height: 35px;
     }
@@ -949,35 +966,41 @@ footer {
         border-radius: 5px;
         margin-top: 0px;
     }
+
     .skills:hover {
         font-size: 10px;
     }
+
     #techSkills {
         height: 100vh;
     }
-    .technical_header, .front_header, .front_header2{
+
+    .technical_header, .front_header, .front_header2 {
         font-size: 25px;
         line-height: 25px;
     }
+
     .typed-cursor {
         font-size: 10px;
     }
+
     .typed_string {
         font-size: 10px;
     }
+
     .front_header {
         font-size: 25px;
         line-height: 25px;
         bottom: 33vh;
         right: 10vw;
     }
+
     .front_header2 {
         font-size: 16px;
         line-height: 16px;
         bottom: 28vh;
         right: 5vw;
     }
-
 
 }
 
@@ -989,8 +1012,8 @@ footer {
 
 #mapholder {
     position: fixed;
-    bottom:0;
-    left:0;
+    bottom: 0;
+    left: 0;
     height: 100vh;
     width: 100vw;
     z-index: -10;
@@ -1002,22 +1025,22 @@ footer {
     position: absolute;
 }
 
-.map_cover{
-background-color: white;
+.map_cover {
+    background-color: white;
     z-index: 0;
 }
 
-.contact{
-    color:white;
+.contact {
+    color: white;
     font-weight: 700;
     margin-top: 10px;
 }
 
-#contact_form{
+#contact_form {
     padding: 20px;
     border-radius: 20px;
     border: black 4px solid;
-    background: url(../img/me_cartoon2.png) rgba(0,0,0,.7) no-repeat bottom left;
+    background: url(../img/me_cartoon2.png) rgba(0, 0, 0, .7) no-repeat bottom left;
     min-height: 300px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1025,53 +1048,36 @@ background-color: white;
     background-size: cover;
 }
 
-.send_btn{
+.send_btn {
     background-color: #111;
     color: white;
     transition-duration: .65s;
 }
 
-.send_btn:hover{
-    background-color:#A42327;
+.send_btn:hover {
+    background-color: #A42327;
     color: white;
 }
 
-.header_bar{
+.header_bar {
     color: #111;
 }
-.header_bar:hover{
+
+.header_bar:hover {
     color: #A42327;
 }
 
-.tech_text{
-    margin-top:5px;
+.tech_text {
+    margin-top: 5px;
     text-align: center;
 }
 
-::-webkit-input-placeholder { /* Chrome */
-    color: black;
-    opacity: 1;
-}
-:-ms-input-placeholder { /* IE 10+ */
-    color: black;
-    opacity: 1;
-}
-::-moz-placeholder { /* Firefox 19+ */
-    color: black;
-    opacity: 1;
-}
-:-moz-placeholder { /* Firefox 4 - 18 */
-    color: black;
-    opacity: 1;
-}
-
-.fast_rotate{
+.fast_rotate {
     animation-name: rotate_cube;
     animation-duration: 60s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
-
 
 @-keyframes blink {
 0% {
